# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2018/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py
2022/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py
2024/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
inputs/2022/: day05.txt
pyutils/: parsing.py  runner.py  start_day.py  utils.py
pyutils/algs/: distance.py  graph.py
