[tool.poetry]
name = "aoc-main"
version = "0.0.1"
description = "Advent of Code"
authors = ["Ryan Downing <ryansdowning1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.1.3"
numpy = "^1.23.4"
pandas = "^1.5.1"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
