[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rich>=13.9.4",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "commitizen>=4.1.0",
    "ipython>=8.18.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]
